tests/paczka1/small_fuzzy/35879394.err
Error in line 4: WiqzAk9n3hi SH26 36,3
Error in line 3: A671 A671 99,8
Error in line 11: 4agwoL A168 27,13
Error in line 13: 4agwoL A168 93,6
Error in line 8: Iz1 S573 83,9
